# pricing-alert

./: .coverage  .gitattributes  .gitignore  Dockerfile.dashboard  Dockerfile.orchestrator  README.md  TESTING.md  check_db.py  config.toml  docker-compose.yml  entrypoint.orchestrator.sh  kabum_debug.html  logs.txt  main.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  scratch_ml_parse.py  scratch_trigger_ml_now.py  setup_ml.py  terabyte_search.html
.agents/: AGENTS.md
.claude/: settings.json
.gemini/.artifacts/: artifact1-system_spec.md  artifact2-directory_structure.md  artifact3-data_contract.md  artifact4-base-extraction-architecture.md  artifact5-orchestration_and_temporal_scheduling.md  artifact6-quality-asserance.md
.github/workflows/: ci.yml
.pytest_tmp/test_engine_scraper_pipeline0/: integration_test.db
.pytest_tmp/test_repository_save_prices0/: test.db
.pytest_tmp/test_repository_save_target_ur0/: test.db
data/: mercadolivre.html  ml_dump_mercado-livre.html  ml_test.html  ml_test_headed.html  prices.db  prices_dev.db  scratch_playwright_fetch.py  target-stores-list.json  target_urls.json  trigger.py
data/locales/: en_US.json  pt_BR.json
data/parsers/: cpu.toml  gpu.toml  motherboard.toml  ram.toml
data/prometheus/: prometheus.yml
data/selectors/: amazon.toml  kabum.toml  mercado-livre.toml  pichau.toml  terabyte.toml
docs/architecture/: OVERVIEW.md  PARSERS.md  TELEMETRY_MONITORING.md
docs/database/: DER_MER.md
docs/guides/: ADDING_NEW_HARDWARE_CATEGORY.md
docs/scrapers/: mercadolivre.md  terabyte.md
docs/scrappers/: kabum.md  mercadolivre.md  terabyte.md
scripts/: backfill_product_attributes.py  backup_db.py  check_pichau_prices.py  discover_amazon_catalog.py  discover_mercadolivre.py  discover_pichau_gpus.py  init_test_db.sql  inspect_pichau_html.py  load_pichau_skus.py  migrate_git_history_prices.py  migrate_legacy_schema.py  migrate_sqlite_to_postgres.py  migrate_target_urls.py  migrate_to_partitioned_price_observations.py  purge_non_target_gpus.py  reclassify_and_clean_listings.py  rename_pt_schema_to_en.py  run_all_scrapers.py  run_gpu_spider_discovery.py  run_qa.ps1  run_unit_tests.py  seed_db.py  test_scraper.py  trim_dev_listings.py
scripts/experimental/: anti_bot_test.py  test_ml_view_source.py  test_terabyte.py  test_view_source.py  test_view_source_extract.py
scripts/utils/: check_db.py  trigger.py
specs/: README.md
specs/amazon-scraper/: spec.md
specs/data-contract/: spec.md
specs/hardware-catalog-expansion/: plan.md  spec.md  tasks.md
specs/hardware-discovery-spiders/: plan.md  spec.md  tasks.md
specs/kabum-scraper/: spec.md
specs/mercadolivre-scraper/: spec.md
specs/pichau-scraper/: plan.md  spec.md
specs/system/: spec.md
specs/target-urls-table/: plan.md  spec.md
specs/terabyte-scraper/: spec.md
src/alerts/: __init__.py  contracts.py  dispatcher.py  evaluator.py  postgres_alert_repository.py  repository.py  sqlite_alert_repository.py
src/core/: base_scraper.py  browser.py  catalog.py  config.py  contract.py  contract_factory.py  execution.py  http_client.py  i18n.py  logging_setup.py  parsing_utils.py  registry.py  specs.py  store.py  telemetry.py  title_parser.py  transport.py  trigger.py  utils.py
src/db/: schema.py
src/engine/: __init__.py  discovery.py  scheduler.py  trigger_processor.py
src/gpu_pricing_alert.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/repositories/: base_repository.py  catalog_repository.py  execution_repository.py  postgres_catalog_repository.py  postgres_execution_repository.py  postgres_repository.py  (+11 more)
tests/: conftest.py
(+118 files in other folders)
