[project]
name = "gpu-pricing-alert"
version = "1.0.0"
description = "Automated GPU price monitoring application."
requires-python = ">=3.11"
dependencies = [
    "streamlit",
    "pydantic",
    "apscheduler",
    "httpx[http2]",
    "playwright",
    "playwright-stealth",
    "aiosqlite",
    "beautifulsoup4",
    "lxml",
    "pandas",
    "plotly"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "respx",
    "pytest-cov",
    "mypy",
    "ruff",
    "black"
]

[tool.pytest.ini_options]
pythonpath = "."
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "e2e: End-to-End tests that execute against a live network",
]
testpaths = ["tests"]
filterwarnings = [
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.coverage.run]
omit = [
    "src/ui/*",
    "tests/*",
]

[tool.mypy]
explicit_package_bases = true
namespace_packages = true
ignore_missing_imports = true
mypy_path = "."
