[project]
name = "gpu-pricing-alert"
version = "1.0.0"
description = "Automated GPU price monitoring application."
requires-python = ">=3.11"
dependencies = [
    "streamlit",
    "pydantic",
    "apscheduler",
    "httpx[http2]",
    "playwright",
    "playwright-stealth",
    "aiosqlite",
    "beautifulsoup4",
    "lxml",
    "pandas",
    "plotly",
    "python-dotenv"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "respx",
    "pytest-cov",
    "mypy",
    "ruff",
    "black"
]

[tool.ruff]
# scripts/ holds ad-hoc dev/QA tools that need `sys.path.insert` before their
# imports (E402) to run standalone outside the package - not held to the same
# lint bar as src/tests.
extend-exclude = ["scripts", "build", ".gemini"]

[tool.ruff.lint.per-file-ignores]
# Dashboard.py and its pages/ need the same sys.path.insert-before-imports
# pattern as scripts/ to run standalone via `streamlit run`.
"src/ui/Dashboard.py" = ["E402"]
"src/ui/pages/*.py" = ["E402"]

[tool.pytest.ini_options]
pythonpath = "."
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "e2e: End-to-End tests that execute against a live network",
]
testpaths = ["tests"]
filterwarnings = [
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.coverage.run]
omit = [
    "src/ui/*",
    "tests/*",
]

[tool.mypy]
explicit_package_bases = true
namespace_packages = true
ignore_missing_imports = true
mypy_path = "."
# src/ui is excluded from coverage (see [tool.coverage.run]) and from the same
# strict-typing bar as core/scrapers/engine - Streamlit's dynamic Literal-typed
# kwargs (e.g. delta_color) don't type-check cleanly against plain str values.
exclude = ["^src/ui/"]
